@@ -12,6 +12,7 @@ Date: ????
     - Toggle some entities periodically
     - Set a 20 second day-night cycle
     - Do an attempt at making the deprecated sprites load
+    - Get the deprecated sprites to load
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2025. 03. 11
